Added delete employee endpoint to backend
