# server/src/api/swagger/swagger.yaml
@@ -90,16 +90,36 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
 
+  /deleteEmployee:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: employee.controller
+    post:
+      description: Update employee
+      # used as the method name of the controller
+      operationId: deleteEmployee
+      parameters:
+        - name: id
+          in: body
+          required: true
+          description: Updates employee's information
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/Employee"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
-  HelloWorldResponse:
-    required:
-      - message
-    properties:
-      message:
-        type: string
   ErrorResponse:
     required:
       - message
